--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,6 +11,10 @@ name = "Contact"
 url = "contact/"
 weight = 2
 
+[[main]]
+name = "Blog"
+url = "blog/"
+weight = 3
 
 [[footer]]
 name = "Privacy Policy"
